--- a/homework/Day_009_HW.ipynb
+++ b/homework/Day_009_HW.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,19 +42,19 @@
     "%matplotlib inline\n",
     "\n",
     "# 設定 data_path\n",
-    "dir_data = '../../data'"
+    "dir_data = 'data'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path of read in data: ../../data\\application_train.csv\n"
+      "Path of read in data: data\\application_train.csv\n"
      ]
     },
     {
@@ -273,7 +273,7 @@
        "[5 rows x 122 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -2345,7 +2345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2374,6 +2374,145 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2548\n",
+      "6.503832383231819e-06\n",
+      "25650.0             2\n",
+      "26100.0             5\n",
+      "26460.0             6\n",
+      "26550.0             8\n",
+      "27000.0            74\n",
+      "27585.0            75\n",
+      "27900.0            82\n",
+      "27967.5            83\n",
+      "28161.0            84\n",
+      "28350.0            95\n",
+      "28404.0            96\n",
+      "28575.0            99\n",
+      "28593.0           100\n",
+      "28723.5           101\n",
+      "28800.0           104\n",
+      "29133.0           105\n",
+      "29250.0           137\n",
+      "29583.0           138\n",
+      "29700.0           141\n",
+      "30150.0           148\n",
+      "30600.0           154\n",
+      "30915.0           155\n",
+      "31050.0           156\n",
+      "31500.0           340\n",
+      "31531.5           341\n",
+      "31815.0           342\n",
+      "31860.0           343\n",
+      "31950.0           347\n",
+      "31990.5           348\n",
+      "32040.0           349\n",
+      "                ...  \n",
+      "1358550.0      307423\n",
+      "1381500.0      307424\n",
+      "1417500.0      307425\n",
+      "1440000.0      307427\n",
+      "1530000.0      307428\n",
+      "1575000.0      307446\n",
+      "1665000.0      307447\n",
+      "1755000.0      307448\n",
+      "1800000.0      307462\n",
+      "1890000.0      307466\n",
+      "1935000.0      307467\n",
+      "2025000.0      307475\n",
+      "2070000.0      307476\n",
+      "2160000.0      307477\n",
+      "2214117.0      307478\n",
+      "2250000.0      307491\n",
+      "2475000.0      307492\n",
+      "2700000.0      307493\n",
+      "2930026.5      307494\n",
+      "3150000.0      307496\n",
+      "3375000.0      307498\n",
+      "3600000.0      307500\n",
+      "3825000.0      307501\n",
+      "3950059.5      307502\n",
+      "4500000.0      307506\n",
+      "6750000.0      307507\n",
+      "9000000.0      307508\n",
+      "13500000.0     307509\n",
+      "18000090.0     307510\n",
+      "117000000.0    307511\n",
+      "Name: AMT_INCOME_TOTAL, Length: 2548, dtype: int64\n",
+      "307511\n",
+      "25650.0        0.000007\n",
+      "26100.0        0.000016\n",
+      "26460.0        0.000020\n",
+      "26550.0        0.000026\n",
+      "27000.0        0.000241\n",
+      "27585.0        0.000244\n",
+      "27900.0        0.000267\n",
+      "27967.5        0.000270\n",
+      "28161.0        0.000273\n",
+      "28350.0        0.000309\n",
+      "28404.0        0.000312\n",
+      "28575.0        0.000322\n",
+      "28593.0        0.000325\n",
+      "28723.5        0.000328\n",
+      "28800.0        0.000338\n",
+      "29133.0        0.000341\n",
+      "29250.0        0.000446\n",
+      "29583.0        0.000449\n",
+      "29700.0        0.000459\n",
+      "30150.0        0.000481\n",
+      "30600.0        0.000501\n",
+      "30915.0        0.000504\n",
+      "31050.0        0.000507\n",
+      "31500.0        0.001106\n",
+      "31531.5        0.001109\n",
+      "31815.0        0.001112\n",
+      "31860.0        0.001115\n",
+      "31950.0        0.001128\n",
+      "31990.5        0.001132\n",
+      "32040.0        0.001135\n",
+      "                 ...   \n",
+      "1358550.0      0.999714\n",
+      "1381500.0      0.999717\n",
+      "1417500.0      0.999720\n",
+      "1440000.0      0.999727\n",
+      "1530000.0      0.999730\n",
+      "1575000.0      0.999789\n",
+      "1665000.0      0.999792\n",
+      "1755000.0      0.999795\n",
+      "1800000.0      0.999841\n",
+      "1890000.0      0.999854\n",
+      "1935000.0      0.999857\n",
+      "2025000.0      0.999883\n",
+      "2070000.0      0.999886\n",
+      "2160000.0      0.999889\n",
+      "2214117.0      0.999893\n",
+      "2250000.0      0.999935\n",
+      "2475000.0      0.999938\n",
+      "2700000.0      0.999941\n",
+      "2930026.5      0.999945\n",
+      "3150000.0      0.999951\n",
+      "3375000.0      0.999958\n",
+      "3600000.0      0.999964\n",
+      "3825000.0      0.999967\n",
+      "3950059.5      0.999971\n",
+      "4500000.0      0.999984\n",
+      "6750000.0      0.999987\n",
+      "9000000.0      0.999990\n",
+      "13500000.0     0.999993\n",
+      "18000090.0     0.999997\n",
+      "117000000.0    1.000000\n",
+      "Name: AMT_INCOME_TOTAL, Length: 2548, dtype: float64\n",
+      "Float64Index([    25650.0,     26100.0,     26460.0,     26550.0,     27000.0,\n",
+      "                  27585.0,     27900.0,     27967.5,     28161.0,     28350.0,\n",
+      "              ...\n",
+      "                3375000.0,   3600000.0,   3825000.0,   3950059.5,   4500000.0,\n",
+      "                6750000.0,   9000000.0,  13500000.0,  18000090.0, 117000000.0],\n",
+      "             dtype='float64', length=2548)\n"
+     ]
     },
     {
      "data": {
